src/styles/_components.scss
blockquote, q, .description, .note {
  h1, h2, h3, h4, h5, h6 {
    column-span: initial;
    font-family: "Scala Sans SC";
    font-size: .423cm;
    font-variant: normal;
  }

  p {
    font-family: "Scala Sans";
  }
}

blockquote, q, .description {
  background-color: #faf7ea;
  border-style: solid;
  border-image: url("images/description-border.png") 12 round;
  border-image-outset: 4px;
  border-width: 7px;
  margin-top: 0.5rem;
}

.note {
  background-color: #e0e5c1;
  border-image: url("images/note-border.png") 11;
  border-image-outset: 9px 0;
  border-style: solid;
  border-width: 11px;
  margin-top: 1rem;
  padding: 0 10px;
}

.stats {
  background-color: #e0e5c1;
  border-image: url("images/stats-border.png") 11;
  border-style: solid;
  border-width: 11px;
  box-shadow: 1px 4px 14px #888;
  font-family: "ScalySans";
  font-size: 0.75rem;
  margin-bottom: 1em;
  padding: 5px 10px;

  h3 {
    border-bottom: 1px solid #58180D;
    font-family: "ScalySans";
    font-size: .45cm;
    font-weight: 400;
    padding-bottom: 0.1rem;
  }

  ul, ol, p {
    font-size: 0.75rem;
  }

  > ul.no-bullet {
    padding-left: 0;
  }

  .abilities {
    width: 100%;
  }
}

.abilities {
  th, td {
    text-align: center;
    padding: 0;
  }
  th {
    font-family: "Scala Sans";
    font-size: 0.75rem;
  }
  td {
    font-family: "ScalySans";
    font-size: 0.8rem;
  }
  tr:nth-child(odd) {
    background-color: transparent;
  }
}

.classtable {
  background-color: white;
  border: initial;
  border-collapse: separate;
  border-image-outset: 25px 17px;
  border-image-repeat: round;
  border-image-slice: 150 200 150 200;
  border-image-source: url("images/table-border.png");
  border-image-width: 47px;
  border-style: solid;
  margin-bottom: 40px;
  margin-top: 25px;
  column-span: all;
  table-layout: auto;
  table {
    th, td {
      line-height: 1.2;
      padding: .3rem .1rem;
    }
  }
}

